k8s/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: password-xl-web-ingress
  namespace: password-xl
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: password-xl-crowdsec-bouncer@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
spec:
  ingressClassName: traefik
  rules:
    - host: password-xl.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: password-xl-web
                port:
                  number: 80
  tls:
    - hosts:
        - password-xl.cn
